--- a/resolution-switcher/ResolutionSwitcher.csproj
+++ b/resolution-switcher/ResolutionSwitcher.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>resolution_switcher</RootNamespace>
+    <RootNamespace>ResolutionSwitcher</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
