--- a/ResolutionSwitcher/ResolutionSwitcher.csproj
+++ b/ResolutionSwitcher/ResolutionSwitcher.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ResolutionSwitcher\ResolutionSwitcher.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
