--- a/ResolutionSwitcher/ResolutionSwitcher.csproj
+++ b/ResolutionSwitcher/ResolutionSwitcher.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.5" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
