--- a/ResolutionSwitcherGui/ResolutionSwitcherGui.csproj
+++ b/ResolutionSwitcherGui/ResolutionSwitcherGui.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.18362.0</TargetFramework>
     <RootNamespace>ResolutionSwitcher</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
